--- a/assets/less/directus/sidebar.less
+++ b/assets/less/directus/sidebar.less
@@ -72,6 +72,9 @@ body.initial-load #sidebar {
     width: 100%;
     color: lighten(@mediumGrey, 5%);
     padding-bottom: 150px;
+    .responsive-nav {
+      display: none;
+    }
     .sidebar-section, .sidebar-extension {
       margin-bottom: 10px;
       margin-top: 15px;
